@@ -212,6 +212,9 @@ Trunk -  Unreleased
     HIVE-1228. allow HBase key column to be anywhere in Hive table
     (John Sichi via Ning Zhang)
 
+    HIVE-1410. Add TCP keepalive option for metastore server
+    (Paul Yang via Ning Zhang)
+
   OPTIMIZATIONS
 
     HIVE-1348. Move inputFileChanged() from ExecMapper to where it is needed
